--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
         Example:
     </p>
     <code>
-        $ ls base.html index.html | ssg
+        ls base.html in.html | ssg > out.html
     </code>
     <h2>
         Build System
